Changes to constants

--- a/src/test/resource/index.html
+++ b/src/test/resource/index.html
@@ -216,7 +216,7 @@
               </div>
             </div>
             <hr class="mb-4" />
-            <div class="custom-control custom-checkbox">
+            <div class="custom-control custom-checkbox" id="checkboxes">
               <input
                 type="checkbox"
                 class="custom-control-input"
@@ -226,7 +226,7 @@
                 >Shipping address is the same as my billing address</label
               >
             </div>
-            <div class="custom-control custom-checkbox">
+            <div class="custom-control custom-checkbox" id="checkboxes">
               <input
                 type="checkbox"
                 class="custom-control-input"
