File changes to index.html

--- a/src/test/resource/index.html
+++ b/src/test/resource/index.html
@@ -84,6 +84,18 @@
               <strong>$44</strong>
             </li>
           </ul>
+          <iframe
+            src="http://www.seleniumframework.com/Practiceform/"
+            height="200"
+            width="350"
+            id="frame1"
+          ></iframe>
+          <iframe
+            src="http://www.seleniumframework.com/Practiceform/"
+            height="200"
+            width="350"
+            name="anotherFrame"
+          ></iframe>
         </div>
         <div class="col-md-8 order-md-1">
           <h4 class="mb-3">Billing address</h4>
