--- a/src/test/resource/index.html
+++ b/src/test/resource/index.html
@@ -1,6 +1,14 @@
 <html>
   <head>
     <title>Marat's Pizza</title>
+    <style>
+      #div1 {
+        width: 300px;
+        height: 220px;
+        padding: 10px;
+        border: 1px solid #aaaaaa;
+      }
+    </style>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -84,20 +92,46 @@
               <strong>$44</strong>
             </li>
           </ul>
-          <iframe
-            src="http://www.seleniumframework.com/Practiceform/"
-            height="200"
-            width="350"
-            id="frame1"
-          ></iframe>
-          <iframe
-            src="http://www.seleniumframework.com/Practiceform/"
-            height="200"
-            width="350"
-            name="anotherFrame"
-          ></iframe>
+          <div
+            id="div1"
+            ondrop="drop(event)"
+            ondragover="allowDrop(event)"
+          ></div>
+          <br />
+          <img
+            id="drag1"
+            src="pizza.jpg"
+            draggable="true"
+            ondragstart="drag(event)"
+            width="100"
+            height="100"
+          />
+          <img
+            id="drag2"
+            src="pizza.jpg"
+            draggable="true"
+            ondragstart="drag(event)"
+            width="100"
+            height="100"
+          />
+          <img
+            id="drag3"
+            src="pizza.jpg"
+            draggable="true"
+            ondragstart="drag(event)"
+            width="100"
+            height="100"
+          />
         </div>
         <div class="col-md-8 order-md-1">
+          <ul id="menu">
+            <p>Menu:</p>
+            <li>Cheese Pizza</li>
+            <li>Chicken Pizza</li>
+            <li>Veggie Pizza</li>
+            <li>Random Pizza</li>
+            <p>Please enjoy your pizza!</p>
+          </ul>
           <h4 class="mb-3">Billing address</h4>
           <form class="needs-validation">
             <div class="row">
@@ -372,6 +406,20 @@
             txt = "Go and add more pizzas in the cart then!";
           }
           document.getElementById("submitText").innerHTML = txt;
+        }
+
+        function allowDrop(ev) {
+          ev.preventDefault();
+        }
+
+        function drag(ev) {
+          ev.dataTransfer.setData("text", ev.target.id);
+        }
+
+        function drop(ev) {
+          ev.preventDefault();
+          var data = ev.dataTransfer.getData("text");
+          ev.target.appendChild(document.getElementById(data));
         }
       </script>
 
